# trash-optimizer

./: .gitignore  .python-version  README.md  requirements-devshared.txt
back-inference/: .env.template  README.md  requirements.txt
back-inference/app/: main.py
back-training/: .env.template  README.md  finetune_efficientnet_custom_v3.py  finetune_efficientnet_realwaste.py  finetune_multimodel_v4.py  requirements.txt
data/: README.md
data-processing/: datasetbuilder.py  spec.md  tools.py  trash-optimizer-datasetbuilder.toml
database_wcp/: README.md  bigquery_utils.py  create_collection_points_db.py  extract_garbage_location_nantes.py  fix_pile_enabled.py  get_lerelais_collection_points.py  pyproject.toml  requirements.txt
dataset/: README.md  requirements.txt  trash-optimizer-datasetbuilder.toml
deployment/: .env.template  .gitignore  Dockerfile  Makefile  QUICKSTART.md  README.md  docker-compose.yml  setup.sh  supervisord.conf
deployment/gcp/: 01-enable-apis.sh  02-setup-secrets.sh  03-setup-bigquery-permissions.sh  04-build-and-push.sh  05-deploy-cloudrun.sh  cloudbuild.yaml  (+2 more)
frontend/: .env.template  README.md  app.py  dummy_function.py  key.py  requirements.txt  route_functions.py
inference/: .env.template  README.md  pyproject.toml
inference/app/: main.py
notebooks/: .env.template  create_trash_dataset.ipynb  create_trash_dataset.py  create_trash_points.ipynb  create_trash_points.py  extract_garbage_location_nantes.ipynb  extract_garbage_location_nantes.py  fix_pile_enabled.py  model_V0_experiment.ipynb  webscrapper-api.py
training/: Makefile  README.md  analyze_misclassifications.py  compare_models.py  finetune_efficientnet_customdataset.py  finetune_v4_multimodel.py  requirements.txt  train.py
webapp/: .env.template  README.md  app-chatbot.py  app.py  app_v2.py  app_v3.py  chatbot.py  dummy_function.py  pyproject.toml  requirements.txt  route_functions.py
webapp/query/: params.py  query.py
webscrapping/: .~lock.ecosystem-ampoules-nantes.csv#  Ecosystem-ampoules-nantes.html  ecosystem_nantes.csv  webscraping.py  webscrapping.py
(+43 files in other folders)
