[project]
name = "trash-optimizer-inference"
version = "0.1.0"
description = "FastAPI inference service for trash classification"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.124.0",
    "uvicorn[standard]==0.38.0",
    "torch==2.9.1",
    "torchvision==0.24.1",
    "pillow==12.0.0",
    "python-multipart==0.0.20",
    "huggingface-hub==1.2.1",
    "python-dotenv==1.2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
